--- a/Lab1/Lab1_STM32.ioc
+++ b/Lab1/Lab1_STM32.ioc
@@ -1,6 +1,5 @@
 #MicroXplorer Configuration settings - do not modify
 File.Version=6
-GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F1
 Mcu.IP0=NVIC
@@ -13,10 +12,13 @@ Mcu.Package=UFQFPN48
 Mcu.Pin0=PA5
 Mcu.Pin1=PA6
 Mcu.Pin2=PA7
-Mcu.Pin3=VP_SYS_VS_ND
-Mcu.Pin4=VP_SYS_VS_Systick
-Mcu.Pin5=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=6
+Mcu.Pin3=PA8
+Mcu.Pin4=PA9
+Mcu.Pin5=PA10
+Mcu.Pin6=VP_SYS_VS_ND
+Mcu.Pin7=VP_SYS_VS_Systick
+Mcu.Pin8=VP_TIM2_VS_ClockSourceINT
+Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C6Ux
@@ -34,6 +36,10 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=LED_GREEN1
+PA10.Locked=true
+PA10.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=LED_RED0
 PA5.Locked=true
@@ -46,6 +52,14 @@ PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=LED_GREEN0
 PA7.Locked=true
 PA7.Signal=GPIO_Output
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=LED_RED1
+PA8.Locked=true
+PA8.Signal=GPIO_Output
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=LED_YELLOW1
+PA9.Locked=true
+PA9.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
