--- a/Lab1/Lab1_STM32.ioc
+++ b/Lab1/Lab1_STM32.ioc
@@ -1,5 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F1
 Mcu.IP0=NVIC
@@ -11,14 +12,22 @@ Mcu.Name=STM32F103C6Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PA5
 Mcu.Pin1=PA6
+Mcu.Pin10=PB4
+Mcu.Pin11=PB5
+Mcu.Pin12=PB6
+Mcu.Pin13=PB7
+Mcu.Pin14=VP_SYS_VS_ND
+Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin16=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PA7
-Mcu.Pin3=PA8
-Mcu.Pin4=PA9
-Mcu.Pin5=PA10
-Mcu.Pin6=VP_SYS_VS_ND
-Mcu.Pin7=VP_SYS_VS_Systick
-Mcu.Pin8=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=9
+Mcu.Pin3=PB0
+Mcu.Pin4=PB1
+Mcu.Pin5=PB2
+Mcu.Pin6=PA8
+Mcu.Pin7=PA9
+Mcu.Pin8=PA10
+Mcu.Pin9=PB3
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C6Ux
@@ -60,6 +69,38 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=LED_YELLOW1
 PA9.Locked=true
 PA9.Signal=GPIO_Output
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=SEG_0A
+PB0.Locked=true
+PB0.Signal=GPIO_Output
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=SEG_0B
+PB1.Locked=true
+PB1.Signal=GPIO_Output
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=SEG_0C
+PB2.Locked=true
+PB2.Signal=GPIO_Output
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=SEG_0D
+PB3.Locked=true
+PB3.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=SEG_0E
+PB4.Locked=true
+PB4.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=SEG_0F
+PB5.Locked=true
+PB5.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=SEG_0G
+PB6.Locked=true
+PB6.Signal=GPIO_Output
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=SEG_DP
+PB7.Locked=true
+PB7.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
