--- a/Lab1/Lab1_STM32.ioc
+++ b/Lab1/Lab1_STM32.ioc
@@ -12,22 +12,30 @@ Mcu.Name=STM32F103C6Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PA5
 Mcu.Pin1=PA6
-Mcu.Pin10=PB4
-Mcu.Pin11=PB5
-Mcu.Pin12=PB6
-Mcu.Pin13=PB7
-Mcu.Pin14=VP_SYS_VS_ND
-Mcu.Pin15=VP_SYS_VS_Systick
-Mcu.Pin16=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin10=PB14
+Mcu.Pin11=PB15
+Mcu.Pin12=PA8
+Mcu.Pin13=PA9
+Mcu.Pin14=PA10
+Mcu.Pin15=PB3
+Mcu.Pin16=PB4
+Mcu.Pin17=PB5
+Mcu.Pin18=PB6
+Mcu.Pin19=PB7
 Mcu.Pin2=PA7
+Mcu.Pin20=PB8
+Mcu.Pin21=PB9
+Mcu.Pin22=VP_SYS_VS_ND
+Mcu.Pin23=VP_SYS_VS_Systick
+Mcu.Pin24=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PB0
 Mcu.Pin4=PB1
 Mcu.Pin5=PB2
-Mcu.Pin6=PA8
-Mcu.Pin7=PA9
-Mcu.Pin8=PA10
-Mcu.Pin9=PB3
-Mcu.PinsNb=17
+Mcu.Pin6=PB10
+Mcu.Pin7=PB11
+Mcu.Pin8=PB12
+Mcu.Pin9=PB13
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C6Ux
@@ -77,6 +85,30 @@ PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=SEG_0B
 PB1.Locked=true
 PB1.Signal=GPIO_Output
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=SEG_1C
+PB10.Locked=true
+PB10.Signal=GPIO_Output
+PB11.GPIOParameters=GPIO_Label
+PB11.GPIO_Label=SEG_1D
+PB11.Locked=true
+PB11.Signal=GPIO_Output
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=SEG_1E
+PB12.Locked=true
+PB12.Signal=GPIO_Output
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=SEG_1F
+PB13.Locked=true
+PB13.Signal=GPIO_Output
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=SEG_1G
+PB14.Locked=true
+PB14.Signal=GPIO_Output
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=SEG_1DP
+PB15.Locked=true
+PB15.Signal=GPIO_Output
 PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=SEG_0C
 PB2.Locked=true
@@ -98,9 +130,17 @@ PB6.GPIO_Label=SEG_0G
 PB6.Locked=true
 PB6.Signal=GPIO_Output
 PB7.GPIOParameters=GPIO_Label
-PB7.GPIO_Label=SEG_DP
+PB7.GPIO_Label=SEG_0DP
 PB7.Locked=true
 PB7.Signal=GPIO_Output
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=SEG_1A
+PB8.Locked=true
+PB8.Signal=GPIO_Output
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=SEG_1B
+PB9.Locked=true
+PB9.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
